<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="5dp"
        app:cardBackgroundColor="#00E5DCF4"
        app:contentPadding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/cartP_thumbnail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/thumbnail"
                android:maxWidth="100dp"
                android:maxHeight="100dp"
                android:src="@drawable/product"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.2" />


            <TextView
                android:id="@+id/cartP_name"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/pName"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/cartP_thumbnail"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cartP_unitPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="3dp"
                android:text="@string/value"
                android:textColor="#F65252"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/quantity_layout"
                app:layout_constraintStart_toEndOf="@id/cartP_thumbnail"
                app:layout_constraintTop_toBottomOf="@+id/cartP_name" />

            <TextView
                android:id="@+id/cartP_totalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value"
                android:textColor="#F65252"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/quantity_layout" />

            <LinearLayout
                android:id="@+id/quantity_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/cartP_totalPrice">

                <ImageButton
                    android:id="@+id/btnDecrease"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="0dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/decrease"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/cartP_quantity"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Quantity" />

                <ImageButton
                    android:id="@+id/btnIncrease"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="0dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/increase"
                    tools:ignore="ContentDescription" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>